test/files/parser/errors/eof-list-comma.otest
name = "End of file after list comma"
line = 3
character = 1
error = 'Expected value after ",".'

---

[ 1, 2, 3,
